changed font to hole webpage and also to add overflow hidden for fix bugs

--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Poppins ;
-    src: url(../fonts/Poppins-Regular.ttf);
+    src: url(../fonts/Roboto-Regular.ttf);
 }
 html{
     scroll-behavior: smooth;
@@ -62,14 +62,14 @@ nav ul li a{
     color: #fff;
     font-size: 18px;
     font-weight: bold;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     padding: 0px 10px;
     /* background-color: chartreuse; */
 }
 nav ul li a:hover{
     color: #000;
     font-weight: bold;
-    border-bottom: 2px solid #000;
+    /* border-bottom: 2px solid #000; */
 }
 
 .checkbtn {
@@ -256,6 +256,7 @@ width: 100%;
     position: relative;
     width: 350px;
     padding: 30px 0px;
+    overflow: hidden !important;
 }
 .project img{
     height: auto;
